--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord Widget Test</title>
-    <script src="widget.min.js"></script>
+    <script src="widget.js"></script>
 </head>
 <body>
     <div id="invite"></div>
